fetch data from repo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-
+spring.jpa.hibernate.ddl-auto=update
+#this curbs error of "drop table topic' which is a default setting:  -spring.jpa.hibernate.ddl-auto=create-drop
