--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 				<artifactId>hibernate-core</artifactId>
 				<version>5.0.7.Final</version>
 		</dependency>
+		<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-autoconfigure</artifactId>
+				<version>1.2.1.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
