--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+#to control who access some info, we do a management port as in
+#this to access say health of the app
+#roles and access rights
+#e.g htttp://localhost:9001/health
+#management.port: 9001
+management.port = 9001
